Positioned tools icons

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/main.css">
   <script src="scripts/app.js"></script>
-  <script src="https://kit.fontawesome.com/e6b766f268.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <title>Vania Tominc Portofolio</title>
 </head>
@@ -29,12 +28,15 @@
             <div class="accordion-text">
               <img src="./images/GAProject04.png" alt="truffluxury-screenshot" class="project-images-resize" />
               <div>
-                <i style='font-size:24px' class='fab'>&#xf41b;</i>      <!-- React -->
-                <i style='font-size:24px' class='fab'>&#xf3e2;</i>      <!-- Python -->
-                <!-- Django-->
-                <!-- Postgresql-->
-                <i style='font-size:24px' class='fab'>&#xf41e;</i>      <!-- Sass -->
-                <p>
+                <div class="tools-icons-positioning">
+                  <img src="images/PNGIcons/ReactPNG.png" alt="React" class="tools-icons-size"/>             <!-- React -->
+                  <img src="images/PNGIcons/PythonPNG.png" alt="Python" class="tools-icons-size" />          <!-- Python -->
+                  <img src="images/PNGIcons/djangoPNG.png" alt="django" class="tools-icons-size" />          <!-- Django-->
+                  <img src="images/PNGIcons/postgresqlPNG.png" alt="PostgreSQL" class="tools-icons-size" />  <!-- Postgresql-->
+                  <img src="images/PNGIcons/bootstrapPNG.png" alt="Bootstrap" class="tools-icons-size" />    <!-- Bootstrap -->
+                  <img src="images/PNGIcons/sassPNG.png" alt="Sass" class="tools-icons-size" />              <!-- Sass -->
+                </div>
+                <p class="accordion-text-paragraph">
                   I built a full-stack app which was rooted in Python, Django and PostgreSQL on the back-end and 
                   React.js for the front-end. I built an e-commerce luxury shop, dedicated to selling Istrian 
                   truffles. As it was my last project I went further with the relationship between different apps, 
@@ -53,18 +55,26 @@
               <img src="https://via.placeholder.com/75" alt="babushka-image" class="project-icon" />
               <h2>Project 03: Pistis Trust</h2>
             </summary>
-            <img src="./images/GAProject03.png" alt="pistis-trust-screenshot" class="project-images-resize" />
-            <div>
-              <i style='font-size:24px' class='fab'>&#xf41b;</i>      <!-- React -->
-
-              <p>
-                Full-stack MERN app, based on Greek mythology and on Trustpilot, where two user types can 
-                register/login, and leave reviews based on their individual experience. As a group we focused on 
-                the back-end, while my main focus was on building various components including the navbar, 
-                rating system, login-register, CRUD functionality for both the comments and for business users, 
-                and putting together a database. 
-              </p>
-              <p>BUTTONS</p>
+            <div class="accordion-text">
+              <img src="./images/GAProject03.png" alt="pistis-trust-screenshot" class="project-images-resize" />
+              <div>
+                <div class="tools-icons-positioning">
+                  <img src="images/PNGIcons/ReactPNG.png" alt="React" class="tools-icons-size" />                   <!-- React -->
+                  <img src="images/PNGIcons/mongodbPNG.png" alt="MongoDB" class="tools-icons-size" />               <!-- MondoDB -->
+                  <img src="images/PNGIcons/bulmaPNG.png" alt="Bulma" class="tools-icons-size" />                   <!-- Bulma -->
+                  <img src="images/PNGIcons/reactSemanticPNG.png" alt="SemanticUIReact" class="tools-icons-size" /> <!-- Semantic UI React-->
+                  <img src="images/PNGIcons/sassPNG.png" alt="Sass" class="tools-icons-size">                       <!-- Sass -->
+                </div>
+  
+                <p>
+                  Full-stack MERN app, based on Greek mythology and on Trustpilot, where two user types can 
+                  register/login, and leave reviews based on their individual experience. As a group we focused on 
+                  the back-end, while my main focus was on building various components including the navbar, 
+                  rating system, login-register, CRUD functionality for both the comments and for business users, 
+                  and putting together a database. 
+                </p>
+                <p>BUTTONS</p>
+              </div>
             </div>
           </details>
         </div>
@@ -76,15 +86,22 @@
               <img src="https://via.placeholder.com/75" alt="babushka-image" class="project-icon" />
               <h2>Project 02: Rick and Morty</h2>
             </summary>
-            <img src="./images/GAProject02.png" alt="rick-and-morty-screenshot" class="project-images-resize" />
-            <div>
-              <p>
-                In two days, we built a working React app using the Rick and Morty API. Pair-coding on one 
-                laptop, we split the work evenly to ensure that we both worked on all parts of the project. 
-                I also took pride in styling the website and gave it a fun and bright look. All in all, it 
-                was an immeasurable experience. 
-              </p>
-              <p>BUTTONS</p>
+            <div class="accordion-text">
+              <img src="./images/GAProject02.png" alt="rick-and-morty-screenshot" class="project-images-resize" />
+              <div>
+                <div class="tools-icons-positioning">
+                  <img src="images/PNGIcons/ReactPNG.png" alt="React" class="tools-icons-size" />                   <!-- React -->
+                  <img src="images/PNGIcons/bulmaPNG.png" alt="Bulma" class="tools-icons-size" />                   <!-- Bulma -->
+                  <img src="images/PNGIcons/sassPNG.png" alt="Sass" class="tools-icons-size" />                     <!-- Sass --> 
+                </div>
+                <p>
+                  In two days, we built a working React app using the Rick and Morty API. Pair-coding on one 
+                  laptop, we split the work evenly to ensure that we both worked on all parts of the project. 
+                  I also took pride in styling the website and gave it a fun and bright look. All in all, it 
+                  was an immeasurable experience. 
+                </p>
+                <p>BUTTONS</p>
+              </div>
             </div>
           </details>
         </div>
@@ -96,15 +113,19 @@
               <img src="https://via.placeholder.com/75" alt="babushka-image" class="project-icon" />
               <h2>Project 01: Babushka Land</h2>
             </summary>
-            <img src="./images/GAProject01.png" alt="babushka-land-screenshot" class="project-images-resize" />
-            <div>
-              <i style='font-size:24px' class='fab'>&#xf13b;</i>      <!-- HTML5 -->
-              <i style='font-size:24px' class='fab'>&#xf38b;</i>      <!-- CSS3 -->
-              <i style='font-size:24px' class='fab'>&#xf3b8;</i>      <!-- JavaScript -->
-              <p>A grid-based game in JavaScript, HTML and CSS, built in a little more than one week. 
-                This game gave me the opportunity to cement my JavaScript knowledge in a fun way.
-              </p>
-              <p>BUTTONS</p>
+            <div class="accordion-text">
+              <img src="./images/GAProject01.png" alt="babushka-land-screenshot" class="project-images-resize" />
+              <div>
+                <div class="tools-icons-positioning">
+                  <img src="images/PNGIcons/htmlPNG.png" alt="HTML5" class="tools-icons-size" />                    <!-- HTML5 -->
+                  <img src="images/PNGIcons/CSSPNG.png" alt="CSS3" class="tools-icons-size" />                      <!-- CSS3 -->
+                  <img src="images/PNGIcons/JSPNG.png" alt="JavaScript" class="tools-icons-size" />                 <!-- JavaScript -->
+                </div>
+                <p>A grid-based game in JavaScript, HTML and CSS, built in a little more than one week. 
+                  This game gave me the opportunity to cement my JavaScript knowledge in a fun way.
+                </p>
+                <p>BUTTONS</p>
+              </div>
             </div>
           </details>
         </div>
