added titles to icon images

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
               <img src="./images/GAProject04.png" alt="truffluxury-screenshot" class="project-images-resize" />
               <div>
                 <div class="tools-icons-positioning">
-                  <img src="images/PNGIcons/ReactPNG.png" alt="React" class="tools-icons-size"/>             <!-- React -->
-                  <img src="images/PNGIcons/PythonPNG.png" alt="Python" class="tools-icons-size" />          <!-- Python -->
-                  <img src="images/PNGIcons/djangoPNG.png" alt="django" class="tools-icons-size" />          <!-- Django-->
-                  <img src="images/PNGIcons/postgresqlPNG.png" alt="PostgreSQL" class="tools-icons-size" />  <!-- Postgresql-->
-                  <img src="images/PNGIcons/bootstrapPNG.png" alt="Bootstrap" class="tools-icons-size" />    <!-- Bootstrap -->
-                  <img src="images/PNGIcons/sassPNG.png" alt="Sass" class="tools-icons-size" />              <!-- Sass -->
+                  <img src="images/PNGIcons/ReactPNG.png" alt="React" title="React" class="tools-icons-size"/>                  <!-- React -->
+                  <img src="images/PNGIcons/PythonPNG.png" alt="Python" title="Python" class="tools-icons-size" />              <!-- Python -->
+                  <img src="images/PNGIcons/djangoPNG.png" alt="Django" title="Django" class="tools-icons-size" />              <!-- Django-->
+                  <img src="images/PNGIcons/postgresqlPNG.png" alt="PostgreSQL" title="PostgreSQL" class="tools-icons-size" />  <!-- Postgresql-->
+                  <img src="images/PNGIcons/bootstrapPNG.png" alt="Bootstrap" title="Bootstrap" class="tools-icons-size" />     <!-- Bootstrap -->
+                  <img src="images/PNGIcons/sassPNG.png" alt="Sass" title="Sass" class="tools-icons-size" />                    <!-- Sass -->
                 </div>
                 <p class="accordion-text-paragraph">
                   I built a full-stack app which was rooted in Python, Django and PostgreSQL on the back-end and 
@@ -59,11 +59,11 @@
               <img src="./images/GAProject03.png" alt="pistis-trust-screenshot" class="project-images-resize" />
               <div>
                 <div class="tools-icons-positioning">
-                  <img src="images/PNGIcons/ReactPNG.png" alt="React" class="tools-icons-size" />                   <!-- React -->
-                  <img src="images/PNGIcons/mongodbPNG.png" alt="MongoDB" class="tools-icons-size" />               <!-- MondoDB -->
-                  <img src="images/PNGIcons/bulmaPNG.png" alt="Bulma" class="tools-icons-size" />                   <!-- Bulma -->
-                  <img src="images/PNGIcons/reactSemanticPNG.png" alt="SemanticUIReact" class="tools-icons-size" /> <!-- Semantic UI React-->
-                  <img src="images/PNGIcons/sassPNG.png" alt="Sass" class="tools-icons-size">                       <!-- Sass -->
+                  <img src="images/PNGIcons/ReactPNG.png" alt="React" title="React" class="tools-icons-size" />                             <!-- React -->
+                  <img src="images/PNGIcons/mongodbPNG.png" alt="MongoDB" title="MongoDB" class="tools-icons-size" />                       <!-- MondoDB -->
+                  <img src="images/PNGIcons/bulmaPNG.png" alt="Bulma" title="Bulma" class="tools-icons-size" />                             <!-- Bulma -->
+                  <img src="images/PNGIcons/reactSemanticPNG.png" alt="SemanticUIReact" title="SemanticUIReact" class="tools-icons-size" /> <!-- Semantic UI React-->
+                  <img src="images/PNGIcons/sassPNG.png" alt="Sass" title="Sass" class="tools-icons-size">                                  <!-- Sass -->
                 </div>
   
                 <p>
@@ -90,9 +90,9 @@
               <img src="./images/GAProject02.png" alt="rick-and-morty-screenshot" class="project-images-resize" />
               <div>
                 <div class="tools-icons-positioning">
-                  <img src="images/PNGIcons/ReactPNG.png" alt="React" class="tools-icons-size" />                   <!-- React -->
-                  <img src="images/PNGIcons/bulmaPNG.png" alt="Bulma" class="tools-icons-size" />                   <!-- Bulma -->
-                  <img src="images/PNGIcons/sassPNG.png" alt="Sass" class="tools-icons-size" />                     <!-- Sass --> 
+                  <img src="images/PNGIcons/ReactPNG.png" alt="React" title="React" class="tools-icons-size" />                   <!-- React -->
+                  <img src="images/PNGIcons/bulmaPNG.png" alt="Bulma" title="Bulma" class="tools-icons-size" />                   <!-- Bulma -->
+                  <img src="images/PNGIcons/sassPNG.png" alt="Sass" title="Sass" class="tools-icons-size" />                      <!-- Sass --> 
                 </div>
                 <p>
                   In two days, we built a working React app using the Rick and Morty API. Pair-coding on one 
@@ -117,9 +117,9 @@
               <img src="./images/GAProject01.png" alt="babushka-land-screenshot" class="project-images-resize" />
               <div>
                 <div class="tools-icons-positioning">
-                  <img src="images/PNGIcons/htmlPNG.png" alt="HTML5" class="tools-icons-size" />                    <!-- HTML5 -->
-                  <img src="images/PNGIcons/CSSPNG.png" alt="CSS3" class="tools-icons-size" />                      <!-- CSS3 -->
-                  <img src="images/PNGIcons/JSPNG.png" alt="JavaScript" class="tools-icons-size" />                 <!-- JavaScript -->
+                  <img src="images/PNGIcons/htmlPNG.png" alt="HTML5" title="HTML5" class="tools-icons-size" />                    <!-- HTML5 -->
+                  <img src="images/PNGIcons/CSSPNG.png" alt="CSS3" title="CSS3" class="tools-icons-size" />                       <!-- CSS3 -->
+                  <img src="images/PNGIcons/JSPNG.png" alt="JavaScript" title="JavaScript" class="tools-icons-size" />            <!-- JavaScript -->
                 </div>
                 <p>A grid-based game in JavaScript, HTML and CSS, built in a little more than one week. 
                   This game gave me the opportunity to cement my JavaScript knowledge in a fun way.
