Some more stuff done.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,252 @@
 
   <body>
 
-    <!-- Projects section -->
+    <!-- ! Home -->
+    <section class="home">
+      <h1>Home</h1>
+      <p>About</p>
+      <p>Experience</p>
+      <p>Projects</p>
+      <p>Contacts</p>
+    </section>
+
+    <!-- ! About -->
+    <section class="about">
+      <h1 class="projects-main-heading">About</h1>
+      <div class="projects-main-container">
+        <div class="about-branding-picture">
+          <h2 class="positioning-about-main-heading">From history master to junior software engineer! Is it a movie? No, 
+            it is just a true story about me, Vania Tominc, a junior full-stack developer. </h2>
+            <img src="https://via.placeholder.com/250" alt="babushka-image" class="project-icon my-photo-positioning" />
+          <p class="accordion-text-paragraph positioning-brand-statement-paragraph">
+            I have always been interested in coding, 
+            initially chose another career, but finally decided to follow my dreams and 
+            become a software engineer. I am someone who likes to experiment, imagine 
+            and create something new, be it in Arts, be it something written in code. 
+            The thrill of making my code work gives me even more motivation to learn 
+            more.
+          </p>
+        </div>
+        <div class="skills-positioning-container">
+          <h2>Skills</h2>
+          <h3>Development Tools</h3>
+          <div class="skills-icons-positioning">
+            <div class="container">
+              <img src="images/PNGIcons/bootstrapPNG.png" alt="Bootstrap" class="skills-icons" />           <!-- Bootstrap -->
+              <div class="overlay">
+                <div class="text">Bootstrap</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/bulmaPNG.png" alt="Bulma" class="skills-icons" />                   <!-- Bulma -->
+              <div class="overlay">
+                <div class="text">Bulma</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/CSSPNG.png" alt="CSS3" class="skills-icons" />                      <!-- CSS3 -->
+              <div class="overlay">
+                <div class="text">CSS3</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/djangoPNG.png" alt="Django" class="skills-icons" />                 <!-- Django -->
+              <div class="overlay">
+                <div class="text">Django</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/htmlPNG.png" alt="HTML5" class="skills-icons" />                    <!-- HTML5 -->
+              <div class="overlay">
+                <div class="text">HTML5</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/JSPNG.png" alt="JavaScript" class="skills-icons" />                 <!-- JavaScript -->
+              <div class="overlay">
+                <div class="text">JavaScript</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/mongodbPNG.png" alt="MongoDB" class="skills-icons" />               <!-- MongoDB -->
+              <div class="overlay">
+                <div class="text">JavaScript</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/nodePNG.png" alt="Node" class="skills-icons" />                     <!-- Node.js -->
+              <div class="overlay">
+                <div class="text">JavaScript</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/PythonPNG.png" alt="Python" class="skills-icons" />                 <!-- Python -->
+              <div class="overlay">
+                <div class="text">Python</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/ReactPNG.png" alt="React" class="skills-icons" />                   <!-- React -->
+              <div class="overlay">
+                <div class="text">React</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/sassPNG.png" alt="Sass" class="skills-icons" />                     <!-- SASS -->
+              <div class="overlay">
+                <div class="text">Sass</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/reactSemanticPNG.png" alt="SemanticUIReact" class="skills-icons" /> <!-- Semantic UI React-->
+              <div class="overlay">
+                <div class="text">Semantic UI React</div>
+              </div>
+            </div>
+          </div>
+
+          <h3>Management & Design Tools</h3>
+          <div class="skills-icons-positioning">
+            <div class="container">
+              <img src="images/PNGIcons/figmaPNG.png" alt="Figma" class="skills-icons" />                   <!-- Figma -->
+              <div class="overlay">
+                <div class="text">Figma</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/gitPNG.png" alt="Git" class="skills-icons" />                       <!-- Git -->
+              <div class="overlay">
+                <div class="text">Git</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/githubPNG.png" alt="GitHub" class="skills-icons" />                 <!-- GitHub -->
+              <div class="overlay">
+                <div class="text">GitHub</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/insomniaPNG.png" alt="Insomnia" class="skills-icons" />             <!-- Insomnia -->
+              <div class="overlay">
+                <div class="text">Insomnia</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/npmPNG.png" alt="npm" class="skills-icons" />                       <!-- npm -->
+              <div class="overlay">
+                <div class="text">npm</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/photoshopPNG.png" alt="Photoshop" class="skills-icons" />           <!-- Photoshop -->
+              <div class="overlay">
+                <div class="text">Photoshop</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/slackPNG.png" alt="Slack" class="skills-icons" />                   <!-- Slack -->
+              <div class="overlay">
+                <div class="text">Slack</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/tableplusPNG.png" alt="TablePlus" class="skills-icons" />           <!-- TablePlus -->
+              <div class="overlay">
+                <div class="text">TablePlus</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/trelloPNG.png" alt="Trello" class="skills-icons" />                 <!-- Trello -->
+              <div class="overlay">
+                <div class="text">Trello</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/vscodePNG.png" alt="VSCode" class="skills-icons" />                 <!-- VSCode -->
+              <div class="overlay">
+                <div class="text">VSCode</div>
+              </div>
+            </div>
+            <div class="container">
+              <img src="images/PNGIcons/yarnPNG.png" alt="Yarn" class="skills-icons" />                     <!-- Yarn -->
+              <div class="overlay">
+                <div class="text">Yarn</div>
+              </div>
+            </div>
+          </div>
+
+          <h3>Currently learning</h3>
+          <div class="skills-icons-positioning">
+            <div class="container">
+              <img src="images/PNGIcons/swiftPNG.png" alt="Swift" class="skills-icons" />                    <!-- Swift -->
+              <div class="overlay">
+                <div class="text">Swift</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ! Experience & Education-->
+
+    <section class="experiences">
+      <h1 class="experiences-main-heading">Experience</h1>
+
+      <div class="experiences-education-wannabe-table">
+        <div class="experiences-left-side">
+          <div>
+            <h2>ACTIVE CARE GROUP</h2>
+            <h3>Peronal Assistant</h3>
+            <h4>Nationwide UK | Feb 2019 - Aug 2021</h4>
+            <ul class="bullet-right">
+              <li class="accordion-text-paragraph">Supporting people with spinal cord injury to live an independent and active life.</li>
+              <li class="accordion-text-paragraph">Outstanding personal qualities applied: respectful, empathetic, reliable, patient, observant, good communication skills.</li>
+            </ul>
+          </div>
+          <div>
+            <h2>POSTOJNSKA JAMA d.d.</h2>
+            <h3>Tourist guide</h3>
+            <h4>Postojna, Slovenia | Jun 2006 - Oct 2018</h4>
+            <ul class="bullet-right">
+              <li class="accordion-text-paragraph">Ability to perform, animate and communicate in public in a variety of different foreign languages and working in a multicultural, international environment.</li>
+              <li class="accordion-text-paragraph">Organizational and project management skills - guiding big or smaller groups (100+ people) in a specific time amount and in limited space, helping with organizing small events.</li>
+              <li class="accordion-text-paragraph">Ability to identify the needs of the target audience.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <h1 class="experiences-main-heading heading-two">&</h1>
+      <h1 class="experiences-main-heading">Education</h1>
+
+      <div class="experiences-education-wannabe-table">
+        <div class="experiences-left-side">
+        </div>
+        <div class="education-right-side">
+          <div>
+            <h2>GENERAL ASSEMBLY</h2>
+            <h3>Software Engineering Immersive Student</h3>
+            <h4>London, UK | May 2021 - Jul 2021</h4>
+            <p class="accordion-text-paragraph">
+              A 12-week (full-time) coding bootcamp designed for a career transformation. 
+              During the course, we had daily stand-ups, online-lessons, and labs. 
+              With projects at the end of each module, I learnt how to build a full-stack 
+              app by either pair-coding or individual-coding. 
+            </p>
+          </div>
+          <div>
+            <h2>UNIVERSITY OF LJUBLJANA, FACULTY OF ARTS</h2>
+            <h3>BA and MSc in Spanish and History</h3>
+            <ul class="bullet-right">
+              <li class="accordion-text-paragraph">Two subject pre-Bologna Non Pedagogical Programme.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ! Projects section -->
     <section class="projects">
       <h1 class="projects-main-heading">Projects</h1>
 
@@ -37,8 +282,8 @@
                   <img src="images/PNGIcons/sassPNG.png" alt="Sass" title="Sass" class="tools-icons-size" />                    <!-- Sass -->
                 </div>
                 <p class="accordion-text-paragraph">
-                  I built a full-stack app which was rooted in Python, Django and PostgreSQL on the back-end and 
-                  React.js for the front-end. I built an e-commerce luxury shop, dedicated to selling Istrian 
+                  I built a full-stack app which was rooted in <strong>Python</strong>, <strong>Django</strong> and <strong>PostgreSQL</strong> on the back-end and 
+                  <strong>React.js</strong> for the front-end. I built an e-commerce luxury shop, dedicated to selling Istrian 
                   truffles. As it was my last project I went further with the relationship between different apps, 
                   building different tables that were part of a single database.
                 </p>
@@ -66,8 +311,8 @@
                   <img src="images/PNGIcons/sassPNG.png" alt="Sass" title="Sass" class="tools-icons-size">                                  <!-- Sass -->
                 </div>
   
-                <p>
-                  Full-stack MERN app, based on Greek mythology and on Trustpilot, where two user types can 
+                <p class="accordion-text-paragraph">
+                  Full-stack <strong>MERN</strong> app, based on Greek mythology and on Trustpilot, where two user types can 
                   register/login, and leave reviews based on their individual experience. As a group we focused on 
                   the back-end, while my main focus was on building various components including the navbar, 
                   rating system, login-register, CRUD functionality for both the comments and for business users, 
@@ -94,8 +339,8 @@
                   <img src="images/PNGIcons/bulmaPNG.png" alt="Bulma" title="Bulma" class="tools-icons-size" />                   <!-- Bulma -->
                   <img src="images/PNGIcons/sassPNG.png" alt="Sass" title="Sass" class="tools-icons-size" />                      <!-- Sass --> 
                 </div>
-                <p>
-                  In two days, we built a working React app using the Rick and Morty API. Pair-coding on one 
+                <p class="accordion-text-paragraph">
+                  In two days, we built a working <strong>React</strong> app using the Rick and Morty API. Pair-coding on one 
                   laptop, we split the work evenly to ensure that we both worked on all parts of the project. 
                   I also took pride in styling the website and gave it a fun and bright look. All in all, it 
                   was an immeasurable experience. 
@@ -121,7 +366,8 @@
                   <img src="images/PNGIcons/CSSPNG.png" alt="CSS3" title="CSS3" class="tools-icons-size" />                       <!-- CSS3 -->
                   <img src="images/PNGIcons/JSPNG.png" alt="JavaScript" title="JavaScript" class="tools-icons-size" />            <!-- JavaScript -->
                 </div>
-                <p>A grid-based game in JavaScript, HTML and CSS, built in a little more than one week. 
+                <p class="accordion-text-paragraph">
+                  A grid-based game in <strong>JavaScript</strong>, <strong>HTML5</strong> and <strong>CSS3</strong>, built in a little more than one week. 
                   This game gave me the opportunity to cement my JavaScript knowledge in a fun way.
                 </p>
                 <p>BUTTONS</p>
@@ -133,7 +379,17 @@
       </div>
 
     </section>
-    
+
+    <!-- ! Contacts -->
+    <section class="contacts">
+      <h1 class="experiences-main-heading">Contacts</h1>
+    </section>
+
+    <!-- ! Footer -->
+    <footer class="footer">
+      <p>Vanja Tominc</p>
+    </footer>
+
   </body>
 
 </html>
