--- a/src/index.html
+++ b/src/index.html
@@ -59,181 +59,183 @@
   
 
     <!-- ! About -->
-    <section class="about" id="about">
+    <section class="about disabled" id="about">
       <h1 class="projects-main-heading">About</h1>
-      <div class="projects-main-container">
-        <div class="about-branding-picture">
-          <div class="positioning-about-main-heading-media-query">
-            <h2 class="positioning-about-main-heading">From history master to junior software engineer! Is it a movie? No, 
-              it is just a true story about me, Vania Tominc, a junior full-stack developer. 
-            </h2>
-          </div>
-          <div>
-            <img src="https://via.placeholder.com/250" alt="my picture" class="project-icon my-photo-positioning" />
-            <p class="accordion-text-paragraph positioning-brand-statement-paragraph">
-              I have always been interested in coding, 
-              initially chose another career, but finally decided to follow my dreams and 
-              become a software engineer. I am someone who likes to experiment, imagine 
-              and create something new, be it in Arts, be it something written in code. 
-              The thrill of making my code work gives me even more motivation to learn 
-              more.
-            </p>
-          </div>
-        </div>
-        <div class="skills-positioning-container">
-          <h2>Skills</h2>
-          <h3>Development Tools</h3>
-          <div class="skills-icons-positioning">
-            <div class="container">
-              <img src="images/PNGIcons/bootstrapPNG.png" alt="Bootstrap" class="skills-icons" />           <!-- Bootstrap -->
-              <div class="overlay">
-                <div class="text">Bootstrap</div>
-              </div>
+      <div class="about-container-media-query">
+        <div class="projects-main-container">
+          <div class="about-branding-picture">
+            <div class="positioning-about-main-heading-media-query">
+              <h2 class="positioning-about-main-heading">From history master to junior software engineer! Is it a movie? No, 
+                it is just a true story about me, Vania Tominc, a junior full-stack developer. 
+              </h2>
             </div>
-            <div class="container">
-              <img src="images/PNGIcons/bulmaPNG.png" alt="Bulma" class="skills-icons" />                   <!-- Bulma -->
-              <div class="overlay">
-                <div class="text">Bulma</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/CSSPNG.png" alt="CSS3" class="skills-icons" />                      <!-- CSS3 -->
-              <div class="overlay">
-                <div class="text">CSS3</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/djangoPNG.png" alt="Django" class="skills-icons" />                 <!-- Django -->
-              <div class="overlay">
-                <div class="text">Django</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/htmlPNG.png" alt="HTML5" class="skills-icons" />                    <!-- HTML5 -->
-              <div class="overlay">
-                <div class="text">HTML5</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/JSPNG.png" alt="JavaScript" class="skills-icons" />                 <!-- JavaScript -->
-              <div class="overlay">
-                <div class="text">JavaScript</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/mongodbPNG.png" alt="MongoDB" class="skills-icons" />               <!-- MongoDB -->
-              <div class="overlay">
-                <div class="text">JavaScript</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/nodePNG.png" alt="Node" class="skills-icons" />                     <!-- Node.js -->
-              <div class="overlay">
-                <div class="text">JavaScript</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/PythonPNG.png" alt="Python" class="skills-icons" />                 <!-- Python -->
-              <div class="overlay">
-                <div class="text">Python</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/ReactPNG.png" alt="React" class="skills-icons" />                   <!-- React -->
-              <div class="overlay">
-                <div class="text">React</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/sassPNG.png" alt="Sass" class="skills-icons" />                     <!-- SASS -->
-              <div class="overlay">
-                <div class="text">Sass</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/reactSemanticPNG.png" alt="SemanticUIReact" class="skills-icons" /> <!-- Semantic UI React-->
-              <div class="overlay">
-                <div class="text">Semantic UI React</div>
-              </div>
+            <div>
+              <img src="https://via.placeholder.com/250" alt="my picture" class="project-icon my-photo-positioning" />
+              <p class="accordion-text-paragraph positioning-brand-statement-paragraph">
+                I have always been interested in coding, 
+                initially chose another career, but finally decided to follow my dreams and 
+                become a software engineer. I am someone who likes to experiment, imagine 
+                and create something new, be it in Arts, be it something written in code. 
+                The thrill of making my code work gives me even more motivation to learn 
+                more.
+              </p>
             </div>
           </div>
-
-          <h3>Management & Design Tools</h3>
-          <div class="skills-icons-positioning">
-            <div class="container">
-              <img src="images/PNGIcons/figmaPNG.png" alt="Figma" class="skills-icons" />                   <!-- Figma -->
-              <div class="overlay">
-                <div class="text">Figma</div>
+          <div class="skills-positioning-container">
+            <h2>Skills</h2>
+            <h3>Development Tools</h3>
+            <div class="skills-icons-positioning">
+              <div class="container">
+                <img src="images/PNGIcons/bootstrapPNG.png" alt="Bootstrap" class="skills-icons" />           <!-- Bootstrap -->
+                <div class="overlay">
+                  <div class="text">Bootstrap</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/bulmaPNG.png" alt="Bulma" class="skills-icons" />                   <!-- Bulma -->
+                <div class="overlay">
+                  <div class="text">Bulma</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/CSSPNG.png" alt="CSS3" class="skills-icons" />                      <!-- CSS3 -->
+                <div class="overlay">
+                  <div class="text">CSS3</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/djangoPNG.png" alt="Django" class="skills-icons" />                 <!-- Django -->
+                <div class="overlay">
+                  <div class="text">Django</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/htmlPNG.png" alt="HTML5" class="skills-icons" />                    <!-- HTML5 -->
+                <div class="overlay">
+                  <div class="text">HTML5</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/JSPNG.png" alt="JavaScript" class="skills-icons" />                 <!-- JavaScript -->
+                <div class="overlay">
+                  <div class="text">JavaScript</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/mongodbPNG.png" alt="MongoDB" class="skills-icons" />               <!-- MongoDB -->
+                <div class="overlay">
+                  <div class="text">JavaScript</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/nodePNG.png" alt="Node" class="skills-icons" />                     <!-- Node.js -->
+                <div class="overlay">
+                  <div class="text">JavaScript</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/PythonPNG.png" alt="Python" class="skills-icons" />                 <!-- Python -->
+                <div class="overlay">
+                  <div class="text">Python</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/ReactPNG.png" alt="React" class="skills-icons" />                   <!-- React -->
+                <div class="overlay">
+                  <div class="text">React</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/sassPNG.png" alt="Sass" class="skills-icons" />                     <!-- SASS -->
+                <div class="overlay">
+                  <div class="text">Sass</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/reactSemanticPNG.png" alt="SemanticUIReact" class="skills-icons" /> <!-- Semantic UI React-->
+                <div class="overlay">
+                  <div class="text">Semantic UI React</div>
+                </div>
               </div>
             </div>
-            <div class="container">
-              <img src="images/PNGIcons/gitPNG.png" alt="Git" class="skills-icons" />                       <!-- Git -->
-              <div class="overlay">
-                <div class="text">Git</div>
+  
+            <h3>Management & Design Tools</h3>
+            <div class="skills-icons-positioning">
+              <div class="container">
+                <img src="images/PNGIcons/figmaPNG.png" alt="Figma" class="skills-icons" />                   <!-- Figma -->
+                <div class="overlay">
+                  <div class="text">Figma</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/gitPNG.png" alt="Git" class="skills-icons" />                       <!-- Git -->
+                <div class="overlay">
+                  <div class="text">Git</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/githubPNG.png" alt="GitHub" class="skills-icons" />                 <!-- GitHub -->
+                <div class="overlay">
+                  <div class="text">GitHub</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/insomniaPNG.png" alt="Insomnia" class="skills-icons" />             <!-- Insomnia -->
+                <div class="overlay">
+                  <div class="text">Insomnia</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/npmPNG.png" alt="npm" class="skills-icons" />                       <!-- npm -->
+                <div class="overlay">
+                  <div class="text">npm</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/photoshopPNG.png" alt="Photoshop" class="skills-icons" />           <!-- Photoshop -->
+                <div class="overlay">
+                  <div class="text">Photoshop</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/slackPNG.png" alt="Slack" class="skills-icons" />                   <!-- Slack -->
+                <div class="overlay">
+                  <div class="text">Slack</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/tableplusPNG.png" alt="TablePlus" class="skills-icons" />           <!-- TablePlus -->
+                <div class="overlay">
+                  <div class="text">TablePlus</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/trelloPNG.png" alt="Trello" class="skills-icons" />                 <!-- Trello -->
+                <div class="overlay">
+                  <div class="text">Trello</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/vscodePNG.png" alt="VSCode" class="skills-icons" />                 <!-- VSCode -->
+                <div class="overlay">
+                  <div class="text">VSCode</div>
+                </div>
+              </div>
+              <div class="container">
+                <img src="images/PNGIcons/yarnPNG.png" alt="Yarn" class="skills-icons" />                     <!-- Yarn -->
+                <div class="overlay">
+                  <div class="text">Yarn</div>
+                </div>
               </div>
             </div>
-            <div class="container">
-              <img src="images/PNGIcons/githubPNG.png" alt="GitHub" class="skills-icons" />                 <!-- GitHub -->
-              <div class="overlay">
-                <div class="text">GitHub</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/insomniaPNG.png" alt="Insomnia" class="skills-icons" />             <!-- Insomnia -->
-              <div class="overlay">
-                <div class="text">Insomnia</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/npmPNG.png" alt="npm" class="skills-icons" />                       <!-- npm -->
-              <div class="overlay">
-                <div class="text">npm</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/photoshopPNG.png" alt="Photoshop" class="skills-icons" />           <!-- Photoshop -->
-              <div class="overlay">
-                <div class="text">Photoshop</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/slackPNG.png" alt="Slack" class="skills-icons" />                   <!-- Slack -->
-              <div class="overlay">
-                <div class="text">Slack</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/tableplusPNG.png" alt="TablePlus" class="skills-icons" />           <!-- TablePlus -->
-              <div class="overlay">
-                <div class="text">TablePlus</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/trelloPNG.png" alt="Trello" class="skills-icons" />                 <!-- Trello -->
-              <div class="overlay">
-                <div class="text">Trello</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/vscodePNG.png" alt="VSCode" class="skills-icons" />                 <!-- VSCode -->
-              <div class="overlay">
-                <div class="text">VSCode</div>
-              </div>
-            </div>
-            <div class="container">
-              <img src="images/PNGIcons/yarnPNG.png" alt="Yarn" class="skills-icons" />                     <!-- Yarn -->
-              <div class="overlay">
-                <div class="text">Yarn</div>
-              </div>
-            </div>
-          </div>
-
-          <h3>Currently learning</h3>
-          <div class="skills-icons-positioning">
-            <div class="container">
-              <img src="images/PNGIcons/swiftPNG.png" alt="Swift" class="skills-icons" />                    <!-- Swift -->
-              <div class="overlay">
-                <div class="text">Swift</div>
+  
+            <h3>Currently learning</h3>
+            <div class="skills-icons-positioning">
+              <div class="container">
+                <img src="images/PNGIcons/swiftPNG.png" alt="Swift" class="skills-icons" />                    <!-- Swift -->
+                <div class="overlay">
+                  <div class="text">Swift</div>
+                </div>
               </div>
             </div>
           </div>
@@ -300,7 +302,7 @@
     </section>
 
     <!-- ! Projects section -->
-    <section class="projects" id="projects">
+    <section class="projects projects-media-query-hover" id="projects">
       <h1 class="projects-main-heading">Projects</h1>
 
       <div class="project-details-width">
