more CSS styling

--- a/src/index.html
+++ b/src/index.html
@@ -260,7 +260,7 @@
       <section class="experiences" id="experiences">
         <h1 class="experiences-main-heading">Experience</h1>
 
-        <div class="experiences-education-wannabe-table" id="experiences-media-query-phone">
+        <div class="experiences-education-wannabe-table experiences-media-query-phone">
           <div class="experiences-left-side">
             <div class="experiences-description experiences-two-padding">
               <h3>SOFTWARE ENGINEERING IMMERSIVE STUDENT <span class="span-slash">|</span> General Assembly</h3>
@@ -458,12 +458,36 @@
       <!-- ! Contacts -->
       <section class="contacts" id="contacts">
         <h1 class="contact-main-heading">Contacts</h1>
-        <div class="cursorTwo"></div>
+        <div class="outside-contact-container">
+          <div class="contact-container">
+            <div class="contact-header">
+              <h2>Hire me.</h2>
+              <div>
+                <div class="positioning-contact-details">
+                  <img src="images/contact/placePNG.png" alt="place" class="contact-icon">
+                  <p>London, N1</p>
+                </div>
+                <div class="positioning-contact-details">
+                  <img src="images/contact/emailPNG.png" alt="email icon" class="contact-icon" />
+                  <a href="mailto:vanja.tominc@gmail.com"><p>vanja.tominc@gmail.com</p></a>
+                </div>
+                <div class="positioning-contact-details">
+                  <img src="images/contact/linkedinPNG.png" alt="LinkedIn" class="contact-icon" />
+                  <a href="https://www.linkedin.com/in/vaniatominc/" target="_blank"><p>https://www.linkedin.com/in/vaniatominc/</p></a>
+                </div>
+                <div class="positioning-contact-details">
+                  <img src="images/PNGIcons/githubPNG.png" alt="GitHub" class="contact-icon" /></a>
+                  <a href="https://github.com/VaniaTominc" target="_blank"><p>https://github.com/VaniaTominc</p></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- ! Footer -->
       <footer class="footer">
-        <p>Vanja Tominc</p>
+        <p>© 2021 Built by Vania Tominc using HTML5, CSS3 and JavaScript</p>
       </footer>
       <div class="cursor"></div>
     </div>
