testing JS home button

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
               </nav>
               <div class="my-introduction-heading">
                 <div class="tominc-media-query">
-                  <h1 class="vania-positioning">TEST</h1>
+                  <h1 class="vania-positioning">Vania</h1>
                   <h1 class="tominc-positioning"><span class="space-unicode">&nbsp;</span>Tominc</h1>
                 </div>
                 <h2>Junior full-stack developer</h2>
