--- a/src/index.html
+++ b/src/index.html
@@ -503,7 +503,16 @@
       </div>
     </div>
 
-    <script src="scripts/index.js"></script>
+    <script src="scripts/index.js">
+    
+    function scrollToTop() {
+      window.scrollTo({
+      top: 0,
+      behavior: 'smooth'
+  })
+}
+
+    </script>
   </body>
 
 </html>
