Don't have a clue.

--- a/src/index.html
+++ b/src/index.html
@@ -503,16 +503,7 @@
       </div>
     </div>
 
-    <script src="scripts/index.js">
-    
-    function scrollToTop() {
-      window.scrollTo({
-      top: 0,
-      behavior: 'smooth'
-  })
-}
-
-    </script>
+    <script src="scripts/index.js"></script>
   </body>
 
 </html>
