--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
   <body>   <!-- class="cursor-outside-container" -->
 
-    <div class="scroll-home" onClick="scrollingHome()"></div>
+    <div class="scroll-home" onClick=scrollingHome()></div>
 
     <div class="intro">
       <div class="toggle-button-position">
