Looks like home button is finally working

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
   <body>   <!-- class="cursor-outside-container" -->
 
-    <div class="scroll-home scroll-back-to-top"></div>
+    <div class="scroll-home"></div>
 
     <div class="intro">
       <div class="toggle-button-position">
