--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,13 @@
 
   <body>   <!-- class="cursor-outside-container" -->
 
+    <div class="nav-icon">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <div class="scroll-home home-button"></div>
-    <div class="toggle-burger"></div>
 
     <div class="cursor-normal">
       <div class="toggle-button-position">
@@ -33,17 +38,19 @@
         <div class="homepage-container">
           <div class="putting-margin-to-home-page">
             <header>
-              <nav>
-                <div class="top-navbar">
-                  <a href="#about"><h2>About</h2></a>
-                  <a href="#experiences"><h2>Experience</h2></a>
-                </div>
-                <div class="bottom-navbar">
-                  <a href="#projects"><h2>Projects</h2></a>
-                  <a href="#contacts"><h2 class="navbar-contacts-directions">Contacts</h2></a>
-                </div>
-                <div class="cursor"></div>
-              </nav>
+              <div class="side-navbar">
+                <nav>
+                  <div class="top-navbar">
+                    <a href="#about"><h2>About</h2></a>
+                    <a href="#experiences"><h2>Experience</h2></a>
+                  </div>
+                  <div class="bottom-navbar">
+                    <a href="#projects"><h2>Projects</h2></a>
+                    <a href="#contacts"><h2 class="navbar-contacts-directions">Contacts</h2></a>
+                  </div>
+                  <div class="cursor"></div>
+                </nav>
+              </div>
               <div class="my-introduction-heading">
                 <div class="tominc-media-query">
                   <h1 class="vania-positioning">Vania</h1>
