Issues with rebuilding for redeploy

--- a/src/index.html
+++ b/src/index.html
@@ -498,7 +498,7 @@
                     <div class="positioning-projects-buttons">
                       <ul>
                         <li>
-                          <a href=" https://github.com/VaniaTominc/GA-Project-02" target="_blank" class="cta">
+                          <a href="https://github.com/VaniaTominc/GA-Project-02" target="_blank" class="cta">
                             <span>ReadMe</span>
                             <svg width="13px" height="10px" viewBox="0 0 13 10">
                               <path d="M1,5 L11,5"></path>
@@ -587,7 +587,7 @@
   
         <!-- ! Contacts -->
         <section class="contacts" id="contacts">
-          <h1 class="contact-main-heading">Contacts</h1>
+          <h1 class="contact-main-heading">Contact</h1>
 
           <div class="container-contact">
             <h3>&bull; Contact me &bull;</h3>
