Sorted darkmode projects icons

--- a/src/index.html
+++ b/src/index.html
@@ -590,7 +590,7 @@
           <h1 class="contact-main-heading">Contact</h1>
 
           <div class="container-contact">
-            <h3>&bull; Contact me &bull;</h3>
+            <h3>&bull; Hire me &bull;</h3>
             <div class="underline">
             </div>
 
