--- a/src/index.html
+++ b/src/index.html
@@ -95,12 +95,12 @@
             <div class="projects-main-container">
               <div class="about-branding-picture">
                 <div class="positioning-about-main-heading-media-query">
-                  <p class="positioning-about-main-heading">From history master to junior software engineer! Is it a movie? No, 
+                  <p class="positioning-about-main-heading">From History master to junior software engineer! Is it a movie? No, 
                     it is just a true story about me, Vania, a junior full-stack developer. 
                   </p>
                 </div>
                 <div class="about-paragraph">
-                  <img src="https://via.placeholder.com/250" alt="my picture" class="my-photo my-photo-positioning" />
+                  <img src="images/IMG_5632.png" alt="my picture" class="my-photo my-photo-positioning" />
                   <p class="accordion-text-paragraph positioning-brand-statement-paragraph">
                     I have always been interested in coding, 
                     initially chose another career, but finally decided to follow my dreams and 
@@ -644,7 +644,7 @@
   
         <!-- ! Footer -->
         <footer class="footer">
-          <p>© 2021 Built by Vania Tominc using HTML5, CSS3 and JavaScript</p>
+          <p>© 2021 Built by Vania Tominc using HTML5, CSS3 and Vanilla JavaScript</p>
         </footer>
         <div class="cursor"></div>
       </div>
