--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/main.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
   <title>Vania Tominc Portofolio</title>
 </head>
 
@@ -53,8 +53,8 @@
               </div>
               <div class="my-introduction-heading">
                 <div class="tominc-media-query">
-                  <h1 class="vania-positioning">Vania</h1>
-                  <h1 class="tominc-positioning"><span class="space-unicode">&nbsp;</span>Tominc</h1>
+                  <h1>Vania Tominc</h1>
+                  <!-- <h1 class="tominc-positioning"><span class="space-unicode">&nbsp;</span>Tominc</h1> -->
                 </div>
                 <h2>Junior full-stack developer</h2>
               </div>
